# rps-frontier-arena

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
assets/: Thumbs.db
backend/: AGENTS.md  main.py  notifications.py
backend/providers/: anthropic_provider.py  common.py  google_provider.py  openai_provider.py  xai_provider.py
config/: models.json
docs/: .env.example  PLAN.md  index.html
frontend/: AGENTS.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HistoryPanel.tsx  OpponentsPanel.tsx  PlayersTable.tsx  Scoreboard.tsx
frontend/lib/: game.ts
scripts/: deploy_hf.py  provider_connectivity_check.py  start.ps1  start.sh  stop.ps1  stop.sh  test_deploy_hf_mock.py  test_provider_wrappers.py  verify_model_ids_live.py
