[project]
name = "rps-frontier-arena"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
